--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-# My hub for code and snippet collections for easy access, feel free to use on your projects
+# My code and snippet hub for easy access, feel free to use on your projects
